# Saturday

pubcast_event_core/: __init__.py
visual_patch_kit_for_big_zip_20260611_20260611_172957/visual_patch_kit_for_big_zip_20260611/: VISUAL_PATCH_KIT_COPY_MANIFEST.md
visual_patch_kit_for_big_zip_20260611_20260611_172957/visual_patch_kit_for_big_zip_20260611/docs/: HANDOFF_VISUAL_PATCH_ADAPTIVE_PROPS_20260610.md  SPINE_README.md
visual_patch_kit_for_big_zip_20260611_20260611_172957/visual_patch_kit_for_big_zip_20260611/runtime/spine/: event_bus.py
visual_patch_kit_for_big_zip_20260611_20260611_172957/visual_patch_kit_for_big_zip_20260611/runtime/spine/performers/: contact.py  interaction_fit.py  motion_feedback.py  visual_patch.py
visual_patch_kit_for_big_zip_20260611_20260611_172957/visual_patch_kit_for_big_zip_20260611/voxel_engine_reference/big_zip_root/: PUBWORLD_CAMERA_UNIFIED_ARCHITECTURE.md  PubWorld.jsx  README (5).md  README (6).md
visual_patch_kit_for_big_zip_20260611_20260611_172957/visual_patch_kit_for_big_zip_20260611/voxel_engine_reference/pubcast_codebase/: CODEX_RESUME_VOXEL_ENGINE_2026-05-02.md  HANDOFF.md  HANDOFF_2026-06-10.md  README.md
visual_patch_kit_for_big_zip_20260611_20260611_172957/visual_patch_kit_for_big_zip_20260611/voxel_engine_reference/pubcast_codebase/rust_crate/: Cargo.toml  pubcast_renderer_built_on_claude.rs  pubcast_renderer_hardened.rs
visual_patch_kit_for_big_zip_20260611_20260611_172957/visual_patch_kit_for_big_zip_20260611/voxel_engine_reference/pubcast_codebase/rust_crate/src/: ws_renderer.rs
(+28 files in other folders)
